Changelog
---------
The UFTP issue tracker is at
https://sourceforge.net/p/unicore/uftp-issues

Full documentation is at: https://uftp-docs.readthedocs.io


***
***  see README-UPGRADE.txt for how to update
***

Auth Server 2.9.0 (released MM DD, 2023)
----------------------------------------
 - show server's session limit in info
 - show uftpd version in info
 - update to UNICORE 9.3.0 base libs  

Auth Server 2.8.2 (released Aug  31, 2023)
------------------------------------------
 - new feature: allow 'reservations' for certain accounts
   that rate-limit other accounts
 - fix: cleanup code that addresses individual UFTPD servers
   so it works consistently across all the authserver features

Auth Server 2.8.1 (released June 30, 2023)
------------------------------------------
 - update to UNICORE 9.2.2 base libs
 - new feature: allow to address individual backend UFTPD servers
   in a round-robin configuration by appending the index in the
   Auth URL, e.g. 'https://localhost:9000/rest/auth/TEST-2'
 - new feature: new field "accessCount" for shares that counts
   the number of accesses for upload/download via HTTP and UFTP
 - fix: NullPointerException when accessing shares
 - fix: reduce number of status check requests to UFTPD

Auth Server 2.8.0 (released Apr 17, 2023)
-----------------------------------------
 - update to UNICORE 9.2.1 base libs
 - new feature: share service returns a directory listing as needed
 - move endpoint for share access via UFTP to /rest/access/{serverName}
 - fix: clean-up and normalize path before accessing shared files
 - fix: when accessing shared data, choose the most specific share
 - fix: access control policy for the "/rest/access" endpoint now allows
   POST for uftp-protocol authentication
 - fix: extra attribute lookup should use 'logical' server name


Auth Server 2.7.0 (released Nov 7, 2022)
----------------------------------------

*** H2 DATABASE NOTE (if you use the data share feature and the H2 database)
