@@ -14,6 +14,7 @@ Auth Server 2.9.0 (released MM DD, 2023)
 ----------------------------------------
  - show server's session limit in info
  - show uftpd version in info
+ - new feature: endpoint 'rest/auth/token' for issuing a token
  - update to UNICORE 9.3.0 base libs  
 
 Auth Server 2.8.2 (released Aug  31, 2023)
